# kitt4sme.dummy

./: Dockerfile  README.md  pyproject.toml
dummy/: main.py
