[tool.poetry]
name = "dummy"
version = "0.1.0"
description = "Dummy service sending greetings."
authors = ["AnzeMarinko"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
loguru = "^0.5.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
